Namen in het engels

--- a/src/html/schermen/instelling2.html
+++ b/src/html/schermen/instelling2.html
@@ -102,6 +102,12 @@
                       <span id="hashresult" style="display: none">mekker</span>
                     </div>
                   </li>
+                  <li>
+                    <div>
+                      <a id="url"></a>
+                      <img id="output">
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
