--- a/src/html/schermen/student2.html
+++ b/src/html/schermen/student2.html
@@ -7,7 +7,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="icon" href="../uno/dist/components/favicon/ro-favicon-donkergeel-0xffb612.png">
   <link rel="stylesheet" href="../uno/dist/core/uno.css">
-
+  <script type="text/javascript" src="../../../node_modules/web3/dist/web3.js"></script>
+  <script type="text/javascript" src="../../../node_modules/uport-connect/dist/uport-connect.js"></script>
   <script src="../systemjs/dist/system.js"></script>
   <script>
   System.config({
@@ -97,7 +98,7 @@
                   <h3>Atheneum</h3>
                   <p>Praedenius Gymnasium</p>
                   <div class="input">
-                    <a class="btn btn--primary" href="#"style="background-color:Tomato;">Opgehaald</a>
+                    <a class="btn btn--primary" onclick="uportVerify()" style="background-color:Tomato;">Opgehaald</a>
                   </div>
                 </div>
               </div>
@@ -132,6 +133,7 @@
     }
   });
 </script>
+<script src="../../js/uport.js"></script>
 
 </body>
 </html>
