Mooi maken voor demo MT

--- a/src/html/schermen/badge.html
+++ b/src/html/schermen/badge.html
@@ -73,19 +73,13 @@
                   <li class="definition-list__item">
                     <div class="definition-list__title">Adres</div>
                     <div class="definition-list__description">
-                      <p>Grote Markt 1<br>Groningen</p>
-                    </div>
-                  </li>
-                  <li class="definition-list__item">
-                    <div class="definition-list__title">Accreditatienummer</div>
-                    <div class="definition-list__description">
-                      <p>1</p>
+                      <p>Turfsingel 82<br>9711 VX Groningen</p>
                     </div>
                   </li>
                   <li class="definition-list__item">
                     <div class="definition-list__title">Referentie kwalificatie</div>
                     <div class="definition-list__description break-all">
-                      <p><a href="https://ipfs.io/ipfs/Qmdtest">IPFS locatie Referentie</a></p>
+                      <p><a href="https://ipfs.io/ipfs/QmYmHV9cGVRkh78TBKgvCBkDdP9B5cdBybDs7evbfFHCvN">IPFS locatie Referentie</a></p>
                     </div>
                   </li>
                   <li class="definition-list__item">
