--- a/src/html/schermen/instelling.html
+++ b/src/html/schermen/instelling.html
@@ -55,19 +55,7 @@
                   <li class="definition-list__item">
                     <div class="definition-list__title">Adres</div>
                     <div class="definition-list__description">
-                      <p>Grote Markt 1<br>Groningen</p>
-                    </div>
-                  </li>
-                  <li class="definition-list__item">
-                    <div class="definition-list__title">Accreditatienummer</div>
-                    <div class="definition-list__description">
-                      <p>1</p>
-                    </div>
-                  </li>
-                  <li class="definition-list__item">
-                    <div class="definition-list__title">Public key/adres</div>
-                    <div class="definition-list__description break-all">
-                      <p>9eb0371b5b7457703001f89cf53505542d2fa0b1c07b2b66fa1a764e911ad4fb</p>
+                      <p>Turfsingel 82<br>9711 VX Groningen</p>
                     </div>
                   </li>
                 </ul>
@@ -79,8 +67,8 @@
                 <div class="content">
                   <img src="_img/059-medal-26.png" class="responsive" alt="Studenten">
                   <p></p>
-                  <h3>vmbo</h3>
-                  <p>Eventueel extra info</p>
+                  <h3>Vmbo</h3>
+                  <p>Praedinius Gymnasium</p>
                   <div class="input">
                     <a class="btn" href="#">Toekennen</a>
                   </div>
@@ -93,8 +81,8 @@
                 <div class="content">
                   <img src="_img/045-medal-30.png" class="responsive" alt="Studenten">
                   <p></p>
-                  <h3>havo</h3>
-                  <p>Eventueel extra info</p>
+                  <h3>Havo</h3>
+                  <p>Praedinius Gymnasium</p>
                   <div class="input">
                     <a class="btn" href="#">Toekennen</a>
                   </div>
@@ -108,7 +96,7 @@
                   <img src="_img/035-medal-35.png" class="responsive" alt="Studenten">
                   <p></p>
                   <h3>Atheneum</h3>
-                  <p>Eventueel extra info</p>
+                  <p>Praedinius Gymnasium</p>
                   <div class="input">
                     <a class="btn" href="badge.html">Toekennen</a>
                   </div>
