--- a/src/html/schermen/instelling2.html
+++ b/src/html/schermen/instelling2.html
@@ -47,7 +47,6 @@
 
         <article>
           <div class="row">
-
             <div class="col-xl-5">
               <div class="content">
                 <ul class="definition-list">
@@ -57,41 +56,13 @@
                       <FORM METHOD="post" ACTION="bestemming">
                         <select id="students">
                           <option value="1">Selecteer een student</option>
-                          <option value="2">Jan de Vries</option>
-                          <option value="3">Marieke Veenstra</option>
-                          <option value="4">Hassan Yilmaz</option>
+                          <option value="0xaa588d3737b611bafd7bd713445b314bd453a5c8">Jan de Vries</option>
+                          <option value="0xfb88de099e13c3ed21f80a7a1e49f8caecf10df6">Marieke Veenstra</option>
+                          <option value="0xaa588d3737b611bafd7bd713445b314bd453a5c8">Hassan Yilmaz</option>
                         </select>
                         </FORM>
                     </div>
                   </li>
-
-                  <li class="definition-list__item">
-                    <div class="definition-list__title">Public key adres</div>
-                    <div class="definition-list__description break-all">
-                      <FORM METHOD="post" ACTION="bestemming">
-                        <select id="addresses">
-                            <option value="1">Selecteer een address</option>
-                            <option value="2">0x30753e4a8aad7f8597332e813735def5dd395028</option>
-                            <option value="3">0xfb88de099e13c3ed21f80a7a1e49f8caecf10df6</option>
-                            <option value="4">0x2c2b9c9a4a25e24b174f26114e8926a9f2128fe4</option>
-                          </select>
-                        </FORM>
-                    </div>
-                  </li>
-
-                  <li class="definition-list__item">
-                      <div class="definition-list__title">Hash</div>
-                      <div class="definition-list__description">
-                        <FORM METHOD="post" ACTION="bestemming">
-                          <select id="hashes">
-                            <option value="1">Selecteer een hash</option>
-                            <option value="2">42</option>
-                            <option value="3">57</option>
-                            <option value="4">81</option>
-                          </select>
-                          </FORM>
-                      </div>
-                    </li>
                   <li>
                     <div class="input">
                       <a class="btn" href="#" onclick="assertBadge()">Toekennen</a>
@@ -99,19 +70,12 @@
                   </li>
                   <li>
                     <div class="definition-list__description">
-                      <span id="hashresult" style="display: none">mekker</span>
-                    </div>
-                  </li>
-                  <li>
-                    <div>
-                      <a id="url"></a>
-                      <img id="output">
+                      <span id="hashresult" style="display: none">resultaat</span>
                     </div>
                   </li>
                 </ul>
               </div>
             </div>
-
             <div class="col-xl-3">
               <div class="content-background">
                 <div class="content">
@@ -123,7 +87,6 @@
                 </div>
               </div>
             </div>
-
         </article>
       </div>
     </main>
