--- a/src/html/schermen/student2.html
+++ b/src/html/schermen/student2.html
@@ -38,7 +38,7 @@
             <div class="content content--header">
               <section class="content-header">
                 <h1>Hallo, Jan de Vries</h1>
-                <p class="subheading">Dit zijn jouw diploma's. Ophalen gelukt!!
+                <p class="subheading">Dit zijn jouw diploma's. Ophalen gelukt!
                   </p>
               </section>
             </div>
@@ -56,7 +56,7 @@
                   <h3>Zwemdiploma A</h3>
                   <p>Zwemschool 't Ottertje</p>
                   <div class="input">
-                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Opgehaald</a>
+                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Delen...</a>
                   </div>
                 </div>
               </div>
@@ -70,7 +70,7 @@
                   <h3>Zwemdiploma B</h3>
                   <p>Zwemschool 't Ottertje</p>
                   <div class="input">
-                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Opgehaald</a>
+                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Delen...</a>
                   </div>
                 </div>
               </div>
@@ -84,7 +84,7 @@
                   <h3>Havo</h3>
                   <p>H.N. Werkman Stadslyceum</p>
                   <div class="input">
-                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Opgehaald</a>
+                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Delen...</a>
                   </div>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                   <h3>Atheneum</h3>
                   <p>Praedenius Gymnasium</p>
                   <div class="input">
-                    <a class="btn btn--primary" onclick="uportVerify()" style="background-color:Tomato;">Opgehaald</a>
+                    <a class="btn btn--primary" onclick="uportVerify()" style="background-color:Tomato;">Delen...</a>
                   </div>
                 </div>
               </div>
