--- a/src/html/schermen/instellingontvanger2.html
+++ b/src/html/schermen/instellingontvanger2.html
@@ -60,7 +60,7 @@
                                                     <a class="btn btn--primary" href="#" onclick="validateAssertion()">Valideren</a>
                                                 </div>
                                             </td>
-                                            <td><span id="validatebadge" style="display: none">Mekker</span></td>
+                                            <td><span id="validatebadge" style="display: none">valideer</span></td>
                                         </tr>
                                     </table>
                                 </h5>
@@ -79,71 +79,32 @@
                                     <li class="definition-list__item">
                                         <div class="definition-list__title">Student</div>
                                         <div class="definition-list__description">
-                                            <select id="students2">
+                                            <select id="students">
                                               <option value="1">Selecteer een student</option>
-                                              <option value="2">Jan de Vries</option>
-                                              <option value="3">Marieke Veenstra</option>
-                                              <option value="4">Hassan Yilmaz</option>
+                                              <option value="0xaa588d3737b611bafd7bd713445b314bd453a5c8">Jan de Vries</option>
+                                              <option value="0xfb88de099e13c3ed21f80a7a1e49f8caecf10df6">Marieke Veenstra</option>
+                                              <option value="0xaa588d3737b611bafd7bd713445b314bd453a5c8">Hassan Yilmaz</option>
                                             </select>
-                                        </div>
-                                    </li>
-                                    <li class="definition-list__item">
-                                        <div class="definition-list__title">Public key/adres</div>
-                                        <div class="definition-list__description break-all">
-                                            <select id="addresses2">
-                                                <option value="1">Selecteer een address</option>
-                                                <option value="2">0x30753e4a8aad7f8597332e813735def5dd395028</option>
-                                                <option value="3">0xfb88de099e13c3ed21f80a7a1e49f8caecf10df6</option>
-                                                <option value="4">0x2c2b9c9a4a25e24b174f26114e8926a9f2128fe4</option>
-                                              </select>
-                                        </div>
-                                    </li>
-                                    <li class="definition-list__item">
-                                       <div class="definition-list__title">Volgnummer</div>
-                                       <div class="definition-list__description break-all">
-                                           <select id="volgnummer">
-                                               <option value="1">1</option>
-                                               <option value="2">2</option>
-                                               <option value="3">3</option>
-                                            </select>
-                                       </div>
-                                   </li>
-                                    <li class="definition-list__item">
-                                        <div class="definition-list__title">Hash bestand</div>
-                                        <div class="definition-list__description break-all">
-                                            <select id="hashes2">
-                                                <option value="1">Selecteer een hash</option>
-                                                <option value="2">42</option>
-                                                <option value="3">57</option>
-                                                <option value="4">81</option>
-                                              </select>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
                         </div>
-
-
                         <div class="col-xl-3">
                             <div class="content-background">
                                 <div class="content">
                                     <img src="_img/035-medal-35.png" class="responsive" alt="Studenten">
                                     <p></p>
                                     <h3>Atheneum</h3>
-
                                     <p>Praedinius Gymnasium</p>
-
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
                 </article>
             </div>
         </div>
     </main>
-
 
 </div>
 
