--- a/src/html/schermen/instellingontvanger.html
+++ b/src/html/schermen/instellingontvanger.html
@@ -14,17 +14,13 @@
     "defaultJSExtensions": true
   });
   </script>
-
   <!--[if lt IE 9]>
   <script src="uno/core/compatibility/polyfill-ie8.js"></script>
   <script src="uno/vendor/js/html5shiv.min.js"></script>
   <![endif]-->
-
 </head>
-
 <body>
-
-  <div class="wrapper">
+   <div class="wrapper">
     <a class="skiplink" href="#content">
       <span class="skiplink__text">Ga direct naar inhoud</span>
     </a>
@@ -35,7 +31,6 @@
     </header>
 
     <main class="skiplink-target main" id="content" tabindex="-1">
-
       <div class="container">
         <header class="row">
           <div class="col-xs-12">
@@ -46,61 +41,78 @@
             </div>
           </div>
         </header>
-
         <div class="container">
           <header class="row">
             <div class="col-xl-12">
               <div class="content" >
-                <section class="content-header">
-                  <h5><input name="myFile" type="file"></h5><br>
-                    <div class="input">
-                      <a class="btn btn--primary" href="instellingontvanger2.html">Selecteer diploma</a>
-                    </div>
-                </section>
+                  <div class="definition-list__description">
+                    <FORM METHOD="post" ACTION="bestemming">
+                      <select id="students">
+                        <option value="1">Selecteer een student</option>
+                          <option value="0x30753e4a8aad7f8597332e813735def5dd395028">Jan de Vries</option>
+                          <option value="0xfb88de099e13c3ed21f80a7a1e49f8caecf10df6">Marieke Veenstra</option>
+                          <option value="0xaa588d3737b611bafd7bd713445b314bd453a5c8">Hassan Yilmaz</option>
+                      </select>
+                      </FORM>
+                  </div>
+                  <div class="input">
+                      <span style="display:none;">student</span>
+                  </div>
               </div>
             </div>
           </header>
       </div>
-
         <article>
           <div class="row">
             <div class="col-xl-3">
               <div class="content">
-                <ul class="definition-list">
-
-
-                  <li class="definition-list__item">
-                    <div class="definition-list__title">Student</div>
-                    <div class="definition-list__description">
-                      <p><br></p>
+                <section class="content-header">
+                    <div class="input">
+                      <a class="btn btn--primary" id="instellingophalen" href="#" onclick="getDiplomaFromIPFS()">Diploma ophalen</a>
                     </div>
-                  </li>
-                </ul>
+                    <div class="input">
+                      <a class="btn btn--primary" id="instellingvalideren" href="#" style="display:none;" onclick="validateAssertion()">Diploma valideren</a>
+                    </div>
+                    <div>
+                        <span id="validatebadge" style="display: none">valideer</span>
+                    </div>
+                </section>
               </div>
             </div>
-
-            <div class="col-xl-3">
+            <div class="col-xl-3" id="instelling1">
               <div class="content-background">
                 <div class="content">
-
                   <p></p>
                   <h3>Diploma</h3>
-
                   <p>Onderwijsinstelling</p>
-
                 </div>
               </div>
             </div>
-
+              <div class="col-xl-3" id="instelling2" style="display:none;">
+                  <div class="content-background">
+                      <div class="content">
+                          <img src="_img/035-medal-35.png" id="ipfsDiploma" class="responsive" alt="Studenten">
+                          <p></p>
+                          <h3>Atheneum</h3>
+                          <p>Praedinius Gymnasium</p>
+                      </div>
+                  </div>
+              </div>
           </div>
-
         </article>
       </div>
     </main>
-
-
-
   </div>
+
+  <script type="text/javascript">
+        function getDiplomaFromIPFS() {
+            document.getElementById("instelling1").style = "display:none;";
+            document.getElementById("instelling2").style = "display:block;";
+            document.getElementById("instellingophalen").style = "display:none;";
+            document.getElementById("instellingvalideren").style = "display:block;";
+            document.getElementById("ipfsDiploma").src = "https://ipfs.io/ipfs/QmYmHV9cGVRkh78TBKgvCBkDdP9B5cdBybDs7evbfFHCvN";
+        }
+  </script>
 
   <script type="text/javascript">
   /* Load tab component */
@@ -122,6 +134,11 @@
     }
   });
 </script>
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+   <script src="../../js/web3.min.js"></script>
+   <script src="https://unpkg.com/ipfs-api/dist/index.js"></script>
+   <script src="../../js/scripts.js"></script>
 
 </body>
 </html>
