Volle flow inclusief readme voor MT.

--- a/src/html/schermen/index.html
+++ b/src/html/schermen/index.html
@@ -55,7 +55,7 @@
             <div class="col-xl-6 col-xl-offset-3">
               <div class="content-background">
                 <div class="content">
-                  <h3>Scan de code met uPort om je diploma's te zien</h3>
+                  <!--<h3>Scan de code met uPort om je diploma's te zien</h3>-->
                   <p></p>
                   <p>
                   <div class="input" id="inloggen">
