--- a/src/html/schermen/student2.html
+++ b/src/html/schermen/student2.html
@@ -84,7 +84,7 @@
                   <h3>Havo</h3>
                   <p>H.N. Werkman Stadslyceum</p>
                   <div class="input">
-                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Delen...</a>
+                    <a class="btn btn--primary" href="#" style="background-color:Tomato;">Deel met Hanze Hogeschool (HH)</a>
                   </div>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                   <h3>Atheneum</h3>
                   <p>Praedenius Gymnasium</p>
                   <div class="input">
-                    <a class="btn btn--primary" onclick="uportVerify()" style="background-color:Tomato;">Delen...</a>
+                    <a class="btn btn--primary" onclick="uportVerify()" style="background-color:Tomato;">Deel met Rijksuniversiteit Groningen (RUG)</a>
                   </div>
                 </div>
               </div>
